test/error/syn/functionParameterExp.tig
let
    function fun(z, a*b, c+d, e, f) := 
    (
    )
in 
end
